src/objects/OpportunityCondition__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>最终用户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>签单情况</relationshipLabel>
        <relationshipName>Opportunity_Condition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>预计成交总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BarndAndType__c</fullName>
        <label>品牌/型号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>预计成交日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InstalledDate__c</fullName>
        <label>预计装机时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OpportunityClosingTime__c</fullName>
        <label>机会关闭日期</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <description>唯一值为 ownerId + WeeklyReport Id + Opportunity Id + week Number</description>
        <externalId>true</externalId>
        <label>OpportunityId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OpportunityStageName__c</fullName>
        <label>销售机会阶段</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>销售机会名称</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Condition</relationshipLabel>
        <relationshipName>Opportunity_Condition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesWeeklyReport2__c</fullName>
        <label>销售周报</label>
        <referenceTo>SalesWeeklyReport__c</referenceTo>
        <relationshipLabel>销售周报</relationshipLabel>
        <relationshipName>Opportunity_Condition</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StagetDescription__c</fullName>
        <label>现阶段状态进展说明</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>本周</fullName>
                </value>
                <value>
                    <fullName>下周</fullName>
                </value>
                <value>
                    <fullName>本周新增</fullName>
                </value>
                <value>
                    <fullName>本周变化</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>签单情况</label>
    <nameField>
        <displayFormat>Opp-{0000000}</displayFormat>
        <label>签单情况 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Condition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>